changed the url name back to /tech

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://helgiisaevar.github.io/",
+  "homepage": "http://helgiisaevar.github.io/tech",
   "name": "tech",
   "version": "0.1.0",
   "private": true,
